# mbcomp

./: .gitmodules  CMakeLists.txt  MBComp 01.jucer  README.md
Source/: Allpass.h  CircularBuffer.h  Compressor.h  EditorComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
src/: CMakeLists.txt  defines.h
src/frame/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/gui/: EditorComponent.cpp  EditorComponent.h
src/processors/: Allpass.h  Compressor.h
